--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "firebase": "^11.9.1",
+    "i18next": "^25.3.0",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "i18next-http-backend": "^3.0.2",
     "lucide-react": "^0.518.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-i18next": "^15.6.0",
     "react-markdown": "^10.1.0",
     "react-syntax-highlighter": "^15.6.1"
   },
